[FIX] web_responsive: sticky header on ios

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -589,7 +589,7 @@ html .o_web_client .o_main .o_main_content {
 
     .o_list_view {
         // th & td are here for compatibility with chrome
-        thead, thead tr:nth-child(1) th {
+        thead {
             position: sticky;
             top: 0;
             z-index: 1;
@@ -597,7 +597,7 @@ html .o_web_client .o_main .o_main_content {
         thead tr:nth-child(1) th {
             background-color: $o-list-footer-bg-color;
         }
-        tfoot, tfoot tr:nth-child(1) td {
+        tfoot {
             position: sticky;
             bottom: 0;
         }
